# Opengl_Vulkan

./: .gitignore  CMakeLists.txt  README.md  conan-setup.bat  conanfile.py
cmake/: FindVulkan.cmake
data/shaders/: axis.frag  axis.frag.spv  axis.vert  axis.vert.spv  compile.bat  normalmap.frag  normalmap.frag.spv  normalmap.vert  normalmap.vert.spv  phong.frag  phong.frag.spv  phong.vert  phong.vert.spv  phong_frag.spv  phong_shader.frag  phong_shader.vert  phong_vert.spv  texture.vert  texture.vert.spv  vert.spv
lib/: CMakeLists.txt  Engine.cpp  Engine.hpp  GUI.cpp  GUI.h  OpenGLEngine.cpp  OpenGLEngine.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanEngine.cpp  VulkanEngine.hpp  VulkanWindow.cpp  VulkanWindow.hpp  Window.cpp  Window.hpp  makeOpengl.cpp  makeVulkan.cpp  mesh.hpp  mytypes.hpp  ngn_command.hpp
lib/common/: CMakeLists.txt  Window.cpp  Window.hpp  baseclass.hpp  camera.cpp  camera.hpp  glsl_constants.h  mesh.hpp  model.cpp  model.hpp  mytypes.hpp  shader.hpp  utils.hpp  vertex.h
lib/common/Input/: input_devices.hpp  input_key.hpp  input_manager.cpp  input_manager.hpp  multiplatform_input.cpp  multiplatform_input.hpp  service_locator.hpp  utils.hpp
lib/ogl/: CMakeLists.txt  InitOpengl.cpp  OpenGLEngine.cpp  OpenGLEngine.hpp  OpenglImage.cpp  OpenglImage.hpp  OpenglObj.hpp  OpenglShader.cpp  OpenglShader.hpp  OpenglUIOverlay.cpp  OpenglUIOverlay.h  OpenglUbo.hpp  OpenglVertexBuffer.cpp  OpenglVertexBuffer.hpp  makeOpengl.cpp  shader_constants.h
lib/stb/: CMakeLists.txt
lib/vk/: CMakeLists.txt  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanEngine.cpp  VulkanEngine.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanUbo.cpp  VulkanUbo.hpp  VulkanVertexBuffer.cpp  VulkanVertexBuffer.hpp  makeVulkan.cpp  readme.md  shader_constants.h  vk_initializers.cpp  vk_initializers.h  vktools.cpp  vktypes.h
lib/vk/shaders/: shader.vert  vert.spv
src/: CMakeLists.txt  main.cpp  main.hpp  myApp.hpp
test/: CMakeLists.txt  camera.cpp  test_camera.cpp  test_utils.cpp
